2013-10-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/config_process.php: fixed the show strict error in PHP
	version 5.4.0 to up.

2013-10-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php: Fixed group filter in
	alerts view for incident #218

2013-10-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.wizard.php: fixed the
	form apperance of the wizard.

2013-10-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/ajax/visual_console_builder.ajax.php: fixed update the
	label.

2013-10-02  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.js: Increase width of modal
	window of license

2013-10-02  Sergio Martin <sergio.martin@artica.es>

	* include/styles/install.css
	include/styles/pandora.css
	install.php
	images/warn.png
	images/pandora_tinylogo_open.png
	images/dot_red.png
	images/dot_green.png: Improve visual styles of 
	install screens

	* general/pandora_help.php: Add a opensource logo
	image in help screen when enterprise is not installed 

	* general/error_screen.php: Add css styles to
	error screens before login

2013-10-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_general.php: removed the field
	to change the license.

2013-10-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/jquery.pandora.js: fixed the previous fixed.

2013-10-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/jquery.pandora.js, index.php,
	general/login_page.php: fixed the show the warning trial enterprise
	message when fail login.

2013-10-01  Sergio Martin <sergio.martin@artica.es>

	* include/styles/menu.css: Fixed menus item height to
	avoid ugliest menu ever when license expired dialog is shown

2013-10-01  Ramon Novoa  <rnovoa@artica.es>

	* index.php,
	  include/config_process.php: Removed a redeclaration of develop_bypass
	  and set it to 0 by default.

2013-09-30  Sergio Martin <sergio.martin@artica.es>
