@@ -1,3 +1,8 @@
+2013-10-04  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_events.php: Fixed ACLs in responses combo
+	in detailed view of an agent for incident #226
+
 2013-10-04 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/config_process.php: fixed the show strict error in PHP
